Gaps correction

--- a/assets/products.css
+++ b/assets/products.css
@@ -9,7 +9,7 @@
 .products__list:not(.carousel) {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(285px, 1fr));
-  gap: 24px;
+  gap: 16px;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -29,6 +29,12 @@
 
 .classic-design .products__wrapper {
   text-align: center;
+}
+
+@media (min-width: 992px) {
+  .products__list:not(.carousel) {
+    gap: 24px;
+  }
 }
 
 @media (min-width: 1200px) {
